// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInput matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col w-full justify-around flex-shrink-0 items-center  my-1"
  >
    <div
      class="flex w-full justify-around items-center border-2 border-indigo-300 bg-indigo-200 bg-opacity-30 rounded-lg"
    >
      <div
        class="flex w-3/12 ms:w-2/12  sm:w-1/12 items-center justify-around md:mx-1"
      >
        <div
          class="relative group"
        >
          <button
            aria-label="Capture Screenshot"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
          >
            <svg
              fill="currentColor"
              height="28"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 3H5V5H3V3ZM7 3H9V5H7V3ZM11 3H13V5H11V3ZM15 3H17V5H15V3ZM19 3H21V5H19V3ZM19 7H21V9H19V7ZM3 19H5V21H3V19ZM3 15H5V17H3V15ZM3 11H5V13H3V11ZM3 7H5V9H3V7ZM10.6667 11L11.7031 9.4453C11.8886 9.1671 12.2008 9 12.5352 9H15.4648C15.7992 9 16.1114 9.1671 16.2969 9.4453L17.3333 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H8C7.44772 21 7 20.5523 7 20V12C7 11.4477 7.44772 11 8 11H10.6667ZM14 18C15.1046 18 16 17.1046 16 16C16 14.8954 15.1046 14 14 14C12.8954 14 12 14.8954 12 16C12 17.1046 12.8954 18 14 18Z"
              />
            </svg>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            Capture Screenshot
          </span>
        </div>
        <div
          class="relative group"
        >
          <button
            aria-label="Upload File"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
          >
            <label
              class="flex items-center justify-center  text-white font-bold px-2 rounded cursor-pointer"
              tabindex="0"
            >
              <input
                accept="image/*, .pdf, .html, .xml, .docx, .txt, .yml, .yaml, .tsx, .ts, .js, .cjs, .coffee, .css, .scss, .sass, less, .xsl, .xlsx,  .jsx, .java, .py, .php, .rb, .erb, .rake, .slim, .cpp, .c, .go, .rs, .log, .cjs, .snap, .sh, .md, .csv, .html, .json, .toml, .sh,  .map,  .xml, .lock, .mod, .metal, .sum, .h, .m, .asp, .net, .dll, .cs, .vb, .fs, .config, .resx, .csproj, .sln"
                aria-label="Upload file"
                style="display: none;"
                type="file"
              />
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="26"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(44, 46, 47); background: rgb(250, 250, 251); cursor: pointer; border: 1px solid #d7dadf;"
                viewBox="0 0 24 24"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.8287 7.75737L9.1718 13.4142C8.78127 13.8047 8.78127 14.4379 9.1718 14.8284C9.56232 15.219 10.1955 15.219 10.586 14.8284L16.2429 9.17158C17.4144 8.00001 17.4144 6.10052 16.2429 4.92894C15.0713 3.75737 13.1718 3.75737 12.0002 4.92894L6.34337 10.5858C4.39075 12.5384 4.39075 15.7042 6.34337 17.6569C8.29599 19.6095 11.4618 19.6095 13.4144 17.6569L19.0713 12L20.4855 13.4142L14.8287 19.0711C12.095 21.8047 7.66283 21.8047 4.92916 19.0711C2.19549 16.3374 2.19549 11.9053 4.92916 9.17158L10.586 3.51473C12.5386 1.56211 15.7045 1.56211 17.6571 3.51473C19.6097 5.46735 19.6097 8.63317 17.6571 10.5858L12.0002 16.2427C10.8287 17.4142 8.92916 17.4142 7.75759 16.2427C6.58601 15.0711 6.58601 13.1716 7.75759 12L13.4144 6.34316L14.8287 7.75737Z"
                />
              </svg>
            </label>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            Upload File
          </span>
        </div>
      </div>
      <form
        class="flex items-center w-8/12 ms:w-9/12 xs:w-10/12 xl:w-11/12 px-2 py-1 rounded-lg hover:bg-indigo-100 focus:outline-none focus:ring focus:ring-stone-300 focus:ring-offset-red"
      >
        <textarea
          aria-label="Enter your message here"
          class="w-full max-h-96 placeholder-gray-400 overflow-y-auto focus: p-3 focus:ring-stone-100 focus:outline-none"
          id="userInput"
          name="userInput"
          placeholder="Click to send. Shift + Enter for a new line."
          rows="1"
          spellcheck="true"
        />
        <button
          class="p-1 border-none opacity-60 hover:stone-600 disabled:cursor-not-allowed"
          disabled=""
          type="submit"
        >
          <svg
            class="w-5 h-5 rotate-90 fill-current"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            >
              <title>
                Arrow Submit Button
              </title>
            </path>
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChatInput matches snapshot when isVisionModel is false 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col w-full justify-around flex-shrink-0 items-center  my-1"
  >
    <div
      class="flex w-full justify-around items-center border-2 border-indigo-300 bg-indigo-200 bg-opacity-30 rounded-lg"
    >
      <div
        class="flex w-3/12 ms:w-2/12  sm:w-1/12 items-center justify-around md:mx-1"
      >
        <div
          class="relative group"
        >
          <button
            aria-label="Capture Screenshot"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
            disabled=""
          >
            <svg
              fill="currentColor"
              height="28"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 3H5V5H3V3ZM7 3H9V5H7V3ZM11 3H13V5H11V3ZM15 3H17V5H15V3ZM19 3H21V5H19V3ZM19 7H21V9H19V7ZM3 19H5V21H3V19ZM3 15H5V17H3V15ZM3 11H5V13H3V11ZM3 7H5V9H3V7ZM10.6667 11L11.7031 9.4453C11.8886 9.1671 12.2008 9 12.5352 9H15.4648C15.7992 9 16.1114 9.1671 16.2969 9.4453L17.3333 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H8C7.44772 21 7 20.5523 7 20V12C7 11.4477 7.44772 11 8 11H10.6667ZM14 18C15.1046 18 16 17.1046 16 16C16 14.8954 15.1046 14 14 14C12.8954 14 12 14.8954 12 16C12 17.1046 12.8954 18 14 18Z"
              />
            </svg>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            ai-model does not have vision feature
          </span>
        </div>
        <div
          class="relative group"
        >
          <button
            aria-label="Upload File"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
          >
            <label
              class="flex items-center justify-center  text-white font-bold px-2 rounded cursor-pointer"
              tabindex="0"
            >
              <input
                accept="image/*, .pdf, .html, .xml, .docx, .txt, .yml, .yaml, .tsx, .ts, .js, .cjs, .coffee, .css, .scss, .sass, less, .xsl, .xlsx,  .jsx, .java, .py, .php, .rb, .erb, .rake, .slim, .cpp, .c, .go, .rs, .log, .cjs, .snap, .sh, .md, .csv, .html, .json, .toml, .sh,  .map,  .xml, .lock, .mod, .metal, .sum, .h, .m, .asp, .net, .dll, .cs, .vb, .fs, .config, .resx, .csproj, .sln"
                aria-label="Upload file"
                style="display: none;"
                type="file"
              />
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="26"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(44, 46, 47); background: rgb(250, 250, 251); cursor: pointer; border: 1px solid #d7dadf;"
                viewBox="0 0 24 24"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.8287 7.75737L9.1718 13.4142C8.78127 13.8047 8.78127 14.4379 9.1718 14.8284C9.56232 15.219 10.1955 15.219 10.586 14.8284L16.2429 9.17158C17.4144 8.00001 17.4144 6.10052 16.2429 4.92894C15.0713 3.75737 13.1718 3.75737 12.0002 4.92894L6.34337 10.5858C4.39075 12.5384 4.39075 15.7042 6.34337 17.6569C8.29599 19.6095 11.4618 19.6095 13.4144 17.6569L19.0713 12L20.4855 13.4142L14.8287 19.0711C12.095 21.8047 7.66283 21.8047 4.92916 19.0711C2.19549 16.3374 2.19549 11.9053 4.92916 9.17158L10.586 3.51473C12.5386 1.56211 15.7045 1.56211 17.6571 3.51473C19.6097 5.46735 19.6097 8.63317 17.6571 10.5858L12.0002 16.2427C10.8287 17.4142 8.92916 17.4142 7.75759 16.2427C6.58601 15.0711 6.58601 13.1716 7.75759 12L13.4144 6.34316L14.8287 7.75737Z"
                />
              </svg>
            </label>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            Upload File
          </span>
        </div>
      </div>
      <form
        class="flex items-center w-8/12 ms:w-9/12 xs:w-10/12 xl:w-11/12 px-2 py-1 rounded-lg hover:bg-indigo-100 focus:outline-none focus:ring focus:ring-stone-300 focus:ring-offset-red"
      >
        <textarea
          aria-label="Enter your message here"
          class="w-full max-h-96 placeholder-gray-400 overflow-y-auto focus: p-3 focus:ring-stone-100 focus:outline-none"
          id="userInput"
          name="userInput"
          placeholder="Click to send. Shift + Enter for a new line."
          rows="1"
          spellcheck="true"
        />
        <button
          class="p-1 border-none opacity-60 hover:stone-600 disabled:cursor-not-allowed"
          disabled=""
          type="submit"
        >
          <svg
            class="w-5 h-5 rotate-90 fill-current"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            >
              <title>
                Arrow Submit Button
              </title>
            </path>
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
